# Huffman

./: .gitignore  CMakeLists.txt
console/: console_color_maker.cpp  console_color_maker.h  file_decoder.cpp  file_decoder.h  file_encoder.cpp  file_encoder.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  main.cpp
lib/: CMakeLists.txt  counter.cpp  decoder.cpp  encoded_bytes.cpp  encoder.cpp  huffman_tree.cpp  symbol_code.cpp
lib/headers/: consts.h  counter.h  decoder.h  encoded_bytes.h  encoder.h  huffman_tree.h  symbol_code.h
tester/: tree_test.cpp
